--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <script src="script.js"></script>
+    <div id="welcome" onclick="Enter()">
+      <h1 id = "hello_message"> Welcome <h1>
+      <p id = "description"> welcome to this game that has yet to be named! <p>
+    </div>
 </body>
 </html>
 
